rename build files, set version number

--- a/public/index-cesi.html
+++ b/public/index-cesi.html
@@ -26,7 +26,7 @@
             id="app"
             style="height: 100vh; max-height: -webkit-fill-available"
         ></div>
-        <script src="./lib/ramp.global.js"></script>
+        <script src="./lib/ramp.js"></script>
         <script type="module" src="./starter-scripts/cesi.js"></script>
     </body>
 </html>
