--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -112,6 +112,12 @@
                 >. Layers with with a subset of their fields specified in the
                 config.
             </li>
+            <li>
+                29.
+                <a href="index-samples.html?sample=29">Grid config</a>. A layer
+                with a customized datatable.
+                <span class="tag misc">Datatable</span>
+            </li>
         </ul>
 
         Samples 5 to 14 to be added!.
