--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -71,6 +71,9 @@
                     <option value="exclusive-fields">
                         28. Layers with exclusive fields
                     </option>
+                    <option value="grid-config">
+                        29. Layer with configured datatable
+                    </option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
