Custom legend symbology stack

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -169,6 +169,12 @@
                 >. Map image layers with groups specified in the config.
                 <span class="tag layer">Map Image Layer</span>
             </li>
+            <li>
+                31.
+                <a href="index-samples.html?sample=31">Custom symbology stack</a
+                >. A legend with a custom configured legend symbology stack.
+                <span class="tag layer">File Layers</span>
+            </li>
         </ul>
 
         <h2>Simple Samples</h2>
