--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -77,6 +77,9 @@
                     <option value="tree-grow">
                         30. Map Image Layers with groups
                     </option>
+                    <option value="custom-symbology">
+                        31. Custom symbology stack
+                    </option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
