Offscale layer support

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -173,7 +173,14 @@
                 31.
                 <a href="index-samples.html?sample=31">Custom symbology stack</a
                 >. A legend with a custom configured legend symbology stack.
-                <span class="tag layer">File Layers</span>
+                <span class="tag legend">Symbology Stack</span>
+            </li>
+            <li>
+                32.
+                <a href="index-samples.html?sample=32">Offscale Layer</a>. A
+                demonstration of what happens when you add an offscale layer to
+                RAMP.
+                <span class="tag layer">Offscale Layer</span>
             </li>
         </ul>
 
