--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -80,6 +80,7 @@
                     <option value="custom-symbology">
                         31. Custom symbology stack
                     </option>
+                    <option value="offscale-layer">32. Offscale Layer</option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
