--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -182,6 +182,14 @@
                 RAMP.
                 <span class="tag layer">Offscale Layer</span>
             </li>
+            <li>
+                33.
+                <a href="index-samples.html?sample=33">Autolegend</a>. A sample
+                with the autolegend fixture enabled, where layer items are added
+                to the legend automatically i.e. without being defined in the
+                legend's config.
+                <span class="tag legend">Autolegend</span>
+            </li>
         </ul>
 
         <h2>Simple Samples</h2>
