Delayed start fix

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -182,6 +182,13 @@
                 RAMP.
                 <span class="tag layer">Offscale Layer</span>
             </li>
+            <li>
+                33.
+                <a href="index-samples.html?sample=33">Delayed Start</a>. A
+                sample that loads the map and layers after a delay of a few
+                seconds.
+                <span class="tag layer">Offscale Layer</span>
+            </li>
         </ul>
 
         <h2>Simple Samples</h2>
