--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -81,6 +81,7 @@
                         31. Custom symbology stack
                     </option>
                     <option value="offscale-layer">32. Offscale Layer</option>
+                    <option value="delayed-start">33. Delayed Start</option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
