--- a/demos/index-wet.html
+++ b/demos/index-wet.html
@@ -102,7 +102,11 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <ul class="list-inline margin-bottom-none">
-                                    <li><a href="#" lang="fr">Français</a></li>
+                                    <li>
+                                        <a href="javascript:;" lang="fr"
+                                            >Français</a
+                                        >
+                                    </li>
                                 </ul>
                             </div>
                         </div>
