permanent attribute filter

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -187,7 +187,14 @@
                 <a href="index-samples.html?sample=33">Delayed Start</a>. A
                 sample that loads the map and layers after a delay of a few
                 seconds.
-                <span class="tag layer">Offscale Layer</span>
+            </li>
+            <li>
+                34.
+                <a href="index-samples.html?sample=34"
+                    >Permanent Layer Filters</a
+                >. Contains two ArcServer layers with permanent layer filters.
+                Only data matching the filter will get downloaded to the client
+                (e.g. in the grid).
             </li>
         </ul>
 
