--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -82,6 +82,9 @@
                     </option>
                     <option value="offscale-layer">32. Offscale Layer</option>
                     <option value="delayed-start">33. Delayed Start</option>
+                    <option value="perm-filter">
+                        34. Permanent Layer Filters
+                    </option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
