--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -196,6 +196,12 @@
                 Only data matching the filter will get downloaded to the client
                 (e.g. in the grid).
             </li>
+            <li>
+                35.
+                <a href="index-samples.html?sample=35">Filtered Geosearch</a>.
+                Geoseach fixture with a custom filter and sort order for
+                results.
+            </li>
         </ul>
 
         <h2>Simple Samples</h2>
