--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -85,6 +85,9 @@
                     <option value="perm-filter">
                         34. Permanent Layer Filters
                     </option>
+                    <option value="geosearch-filtered">
+                        35. Geosearch with filtered results
+                    </option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
