RAMP within form

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -270,5 +270,19 @@
                 </a>
             </li>
         </ul>
+
+        <h2>Various Templates</h2>
+        Maps that are embedded in pages with different templates.
+        <ul>
+            <li>
+                <a href="index-multi.html">Multiple RAMP instances</a>
+            </li>
+            <li>
+                <a href="index-form.html">RAMP within a form</a>
+            </li>
+            <li>
+                <a href="index-wet.html">RAMP inside the WET template</a>
+            </li>
+        </ul>
     </body>
 </html>
