text basemap option

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -202,6 +202,11 @@
                 Geoseach fixture with a custom filter and sort order for
                 results.
             </li>
+            <li>
+                36.
+                <a href="index-samples.html?sample=36">Basemap Thumbnails</a>.
+                Basemap fixture with different options on thumbnails.
+            </li>
         </ul>
 
         <h2>Simple Samples</h2>
