--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -88,6 +88,9 @@
                     <option value="geosearch-filtered">
                         35. Geosearch with filtered results
                     </option>
+                    <option value="basemaps">
+                        36. Basemap fixture with configured thumbnails
+                    </option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
