Add custom store sample

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -207,6 +207,12 @@
                 <a href="index-samples.html?sample=36">Basemap Thumbnails</a>.
                 Basemap fixture with different options on thumbnails.
             </li>
+            <li>
+                37.
+                <a href="index-samples.html?sample=37">Custom Store</a>. A
+                custom fixture with an externally defined custom store.
+                <span class="tag misc">Custom Store</span>
+            </li>
         </ul>
 
         <h2>Simple Samples</h2>
