--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -91,6 +91,7 @@
                     <option value="basemaps">
                         36. Basemap fixture with configured thumbnails
                     </option>
+                    <option value="custom-store">37. Custom Store</option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
