Panel in external div

--- a/demos/index-wet.html
+++ b/demos/index-wet.html
@@ -323,7 +323,15 @@
         </script>
         <main class="container" property="mainContentOfPage" role="main">
             <div id="IE"></div>
-            <div id="app" style="height: 70vh"></div>
+            <div style="display: flex">
+                <div
+                    class="ramp-app"
+                    id="legend"
+                    style="height: 70vh; width: 30%"
+                ></div>
+                <div id="app" style="height: 70vh; width: 70%"></div>
+            </div>
+            <div class="ramp-app" id="grid" style="height: 70vh"></div>
             <span id="ramp-version"></span>
 
             <div id="def-preFooter">
