--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -219,6 +219,18 @@
                 layers with merged grid fixtures.
                 <span class="tag misc">Datatable</span>
             </li>
+            <li>
+                39.
+                <a href="index-samples.html?sample=38">Old Default Sample</a>.
+                Contains an outdated main sample.
+                <span class="tag layer">Feature Layer</span
+                ><span class="tag layer">Map Image Layer</span
+                ><span class="tag layer">WFS Layer</span
+                ><span class="tag layer">Points</span
+                ><span class="tag layer">Polygons</span
+                ><span class="tag legend">Exclusive Set</span
+                ><span class="tag legend">Info Sections</span>
+            </li>
         </ul>
 
         <h2>Simple Samples</h2>
