--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -93,6 +93,7 @@
                     </option>
                     <option value="custom-store">37. Custom Store</option>
                     <option value="merge-grid">38. Merge Grid</option>
+                    <option value="old-main">39. Old Default Sample</option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
