Add wet teleport to samples directory page

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -312,6 +312,9 @@
             <li>
                 <a href="index-wet.html">RAMP inside the WET template</a>
             </li>
+            <li>
+                <a href="index-teleport-wet.html">RAMP inside the WET template with teleport enabled</a>
+            </li>
         </ul>
     </body>
 </html>
