Change tailwind style scoping class

--- a/demos/index-teleport-wet.html
+++ b/demos/index-teleport-wet.html
@@ -325,13 +325,13 @@
             <div id="IE"></div>
             <div style="display: flex">
                 <div
-                    class="ramp-app"
+                    class="ramp-styles"
                     id="legend"
                     style="height: 70vh; width: 30%"
                 ></div>
                 <div id="app" style="height: 70vh; width: 70%"></div>
             </div>
-            <div class="ramp-app" id="grid" style="height: 70vh"></div>
+            <div class="ramp-styles" id="grid" style="height: 70vh"></div>
             <span id="ramp-version"></span>
 
             <div id="def-preFooter">
