--- a/demos/index-teleport.html
+++ b/demos/index-teleport.html
@@ -52,7 +52,7 @@
             <h1 style="text-align: center">RAMP Teleportation Magic</h1>
             <div id="form">
                 <div id="ramp-instance"></div>
-                <div class="ramp-app" id="grid"></div>
+                <div class="ramp-styles" id="grid"></div>
             </div>
         </div>
 
