Grid Custom Cell Template

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -231,6 +231,14 @@
                 ><span class="tag legend">Exclusive Set</span
                 ><span class="tag legend">Info Sections</span>
             </li>
+            <li>
+                40.
+                <a href="index-samples.html?sample=40"
+                    >Grid Custom Cell Template</a
+                >. Contains a layer with a grid that has a custom cell template
+                for some columns.
+                <span class="tag misc">Datatable</span>
+            </li>
         </ul>
 
         <h2>Simple Samples</h2>
@@ -313,7 +321,9 @@
                 <a href="index-wet.html">RAMP inside the WET template</a>
             </li>
             <li>
-                <a href="index-teleport-wet.html">RAMP inside the WET template with teleport enabled</a>
+                <a href="index-teleport-wet.html"
+                    >RAMP inside the WET template with teleport enabled</a
+                >
             </li>
         </ul>
     </body>
