Data Layers Legend Integration

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -284,6 +284,12 @@
                 layer, one shapefile layer, and one GeoJson layer.
                 <span class="tag layer">File Layers</span>
             </li>
+            <li>
+                41.
+                <a href="index-samples.html?sample=41">Data Layers</a>. One json
+                data layer, and one esri table data layer.
+                <span class="tag layer">Data Layers</span>
+            </li>
         </ul>
 
         <h2>Respect for Apps</h2>
