--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -97,6 +97,9 @@
                     <option value="grid-custom-template">
                         40. Grid Custom Cell Template
                     </option>
+                    <option value="simple-data">
+                        41. Basic Map with Data Layers
+                    </option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
