grid filter race fix

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -312,6 +312,11 @@
                     25. Canadian Centre for Climate Services
                 </a>
             </li>
+            <li>
+                <a href="index-samples.html?sample=42">
+                    42. Cumulative Effects
+                </a>
+            </li>
         </ul>
 
         <h2>Various Templates</h2>
