--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -100,6 +100,9 @@
                     <option value="simple-data">
                         41. Basic Map with Data Layers
                     </option>
+                    <option value="cumulative-effects">
+                        42. Cumulative Effects Mirror
+                    </option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
