add support for customized grid buttons

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -239,6 +239,13 @@
                 for some columns.
                 <span class="tag misc">Datatable</span>
             </li>
+            <li>
+                43.
+                <a href="index-samples.html?sample=43"
+                    >Grid Custom Row Buttons</a
+                >. Contains some layers that have custom row buttons.
+                <span class="tag misc">Datatable</span>
+            </li>
         </ul>
 
         <h2>Simple Samples</h2>
