--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -103,6 +103,9 @@
                     <option value="cumulative-effects">
                         42. Cumulative Effects Mirror
                     </option>
+                    <option value="custom-grid-buttons">
+                        43. Custom Grid Row Buttons
+                    </option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
