basemap recovery system

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -246,6 +246,11 @@
                 >. Contains some layers that have custom row buttons.
                 <span class="tag misc">Datatable</span>
             </li>
+            <li>
+                44.
+                <a href="index-samples.html?sample=44">Failing Basemaps</a>.
+                Contains scenarios where basemaps fail.
+            </li>
         </ul>
 
         <h2>Simple Samples</h2>
