--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -106,6 +106,7 @@
                     <option value="custom-grid-buttons">
                         43. Custom Grid Row Buttons
                     </option>
+                    <option value="basemap-fail">44. Failing Basemap</option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
