fix webgl context issue

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -348,6 +348,10 @@
                     >RAMP inside the WET template with teleport enabled</a
                 >
             </li>
+            <li>
+                <a href="index-multi-wet.html"
+                    >Multiple RAMP instances inside the WET template</a>
+            </li>
         </ul>
     </body>
 </html>
