--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -251,6 +251,11 @@
                 <a href="index-samples.html?sample=44">Failing Basemaps</a>.
                 Contains scenarios where basemaps fail.
             </li>
+            <li>
+                45.
+                <a href="index-samples.html?sample=45">Point Clustering</a>.
+                Contains layers that have point clustering enabled.
+            </li>
         </ul>
 
         <h2>Simple Samples</h2>
