--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -107,6 +107,9 @@
                         43. Custom Grid Row Buttons
                     </option>
                     <option value="basemap-fail">44. Failing Basemap</option>
+                    <option value="point-clustering">
+                        45. Point Clustering
+                    </option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
