--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -202,6 +202,11 @@
                 45.
                 <a href="index-samples.html?sample=45">Custom Export</a>. Contains a custom layout for the export image.
             </li>
+            <li>
+                47.
+                <a href="index-samples.html?sample=47">Point Clustering</a>. Contains layers that have point clustering
+                enabled.
+            </li>
         </ul>
 
         <h2>Simple Samples</h2>
