custom renderer sample fix

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -221,7 +221,7 @@
             </li>
             <li>
                 39.
-                <a href="index-samples.html?sample=38">Old Default Sample</a>.
+                <a href="index-samples.html?sample=39">Old Default Sample</a>.
                 Contains an outdated main sample.
                 <span class="tag layer">Feature Layer</span
                 ><span class="tag layer">Map Image Layer</span
@@ -350,7 +350,8 @@
             </li>
             <li>
                 <a href="index-multi-wet.html"
-                    >Multiple RAMP instances inside the WET template</a>
+                    >Multiple RAMP instances inside the WET template</a
+                >
             </li>
         </ul>
     </body>
