details panel re-work

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -344,6 +344,11 @@
                 <a href="index-wet.html">RAMP inside the WET template</a>
             </li>
             <li>
+                <a href="index-teleport-details.html"
+                    >RAMP with a teleported details panel</a
+                >
+            </li>
+            <li>
                 <a href="index-teleport-wet.html"
                     >RAMP inside the WET template with teleport enabled</a
                 >
