--- a/public/index-simple.html
+++ b/public/index-simple.html
@@ -17,7 +17,7 @@
         ></div>
 
         <!-- Load the compiled RAMP script-->
-        <script src="./lib/ramp.js"></script>
+        <script src="./lib/ramp.browser.iife.js"></script>
 
         <!-- Create simple RAMP instance-->
         <script>
