--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -107,6 +107,7 @@
                         43. Custom Grid Row Buttons
                     </option>
                     <option value="basemap-fail">44. Failing Basemap</option>
+                    <option value="reloadTest">45. Reload Test</option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
