feat: add ability to register a custom export renderer via the api

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -251,6 +251,11 @@
                 <a href="index-samples.html?sample=44">Failing Basemaps</a>.
                 Contains scenarios where basemaps fail.
             </li>
+            <li>
+                45.
+                <a href="index-samples.html?sample=45">Custom Export</a>.
+                Contains a custom layout for the export image.
+            </li>
         </ul>
 
         <h2>Simple Samples</h2>
