add aria label to buttons, fix color contrast

--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -148,6 +148,7 @@
                 margin: 10px;
                 flex-grow: 0;
                 white-space: nowrap;
+                color: #000000;
             }
             #selectConfig {
                 width: 90%;
