add methods to register and update panels using html content

--- a/demos/enhanced-all.html
+++ b/demos/enhanced-all.html
@@ -81,6 +81,11 @@
                     >Different Projections</a
                 >. Has feature-based layers in a mix of source projections.
             </li>
+            <li>
+                09.
+                <a href="enhanced-samples.html?sample=9">Custom HTML panels</a>.
+                Contains custom HTML panels
+            </li>
         </ul>
 
         <h2>Fancy Samples</h2>
