--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -31,6 +31,9 @@
                 <option value="008-projection-party">
                     08. Layers in Different Projections
                 </option>
+                <option value="009-custom-panels">
+                    09. Custom HTML panels
+                </option>
             </select>
             <nav class="linky-container">
                 <a class="linky" href="enhanced-all.html">Catalogue</a
