global time default

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -307,6 +307,11 @@
                 data layer, and one esri table data layer.
                 <span class="tag layer">Data Layers</span>
             </li>
+            <li>
+                46.
+                <a href="index-samples.html?sample=46">No Layers</a>. A map with
+                the typical fixins, but no layers.
+            </li>
         </ul>
 
         <h2>Respect for Apps</h2>
