--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -110,6 +110,9 @@
                     <option value="export-custom-renderer">
                         45. Custom Export
                     </option>
+                    <option value="no-layers">
+                        46. Normal Map with No Layers
+                    </option>
                 </select>
                 <a class="linky" href="index-all.html">Catalogue</a>
             </div>
