--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>R4MP Samples Yellow Pages</title>
+        <title>R4MP Classic Samples Yellow Pages</title>
         <style>
             .tag {
                 display: inline-block;
@@ -22,8 +22,10 @@
         </style>
     </head>
     <body>
-        <h1>RAMP 4 Samples Catalogue</h1>
-        <h2>Classic Samples</h2>
+        <h1>RAMP 4 Classic Samples Catalogue</h1>
+        <h2>Enhanced Samples</h2>
+        Are found <a href="enhanced-all.html">here</a>.
+        <h2>Classic<sup>2</sup> Samples</h2>
         Samples from development which were ported to the Samples suite.
         <ul>
             <li>
