Add mini-icons to legend items

--- a/demos/enhanced-all.html
+++ b/demos/enhanced-all.html
@@ -82,6 +82,11 @@
                 <a href="index-samples.html?sample=7">O.G. Main</a>. The first /
                 default sample from the classic samples.
             </li>
+            <li>
+                08.
+                <a href="enhanced-samples.html?sample=8">All Layer Types</a>.
+                Many layer types on one page, useful for comparisons.
+            </li>
         </ul>
 
         <h2>Respect for Apps</h2>
