--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -31,6 +31,7 @@
                 <option value="008-projection-party">
                     08. Layers in Different Projections
                 </option>
+                <option value="009-all-layers">09. All Layer Types</option>
             </select>
             <a class="linky" href="enhanced-all.html">Catalogue</a
             ><a class="linky" href="index-all.html">Classic Samples</a>
