--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -28,6 +28,9 @@
                 <option value="007-main-classic">
                     07. Classic Main Sample
                 </option>
+                <option value="009-projection-party">
+                    09. Layers in Different Projections
+                </option>
             </select>
             <a class="linky" href="enhanced-all.html">Catalogue</a
             ><a class="linky" href="index-all.html">Classic Samples</a>
