--- a/demos/enhanced-all.html
+++ b/demos/enhanced-all.html
@@ -72,6 +72,12 @@
                 <a href="enhanced-samples.html?sample=6">Data Layers</a>. A
                 table service and custom JSON layer.
             </li>
+            <li>
+                08.
+                <a href="enhanced-samples.html?sample=8"
+                    >Different Projections</a
+                >. Has feature-based layers in a mix of source projections.
+            </li>
         </ul>
 
         <h2>Fancy Samples</h2>
