qa samples page

--- a/demos/enhanced-all.html
+++ b/demos/enhanced-all.html
@@ -34,8 +34,11 @@
     </head>
     <body>
         <h1>RAMP 4 Enhanced Samples Catalogue</h1>
-        <h2>Classic Samples</h2>
-        <p>Are found <a href="index-all.html">here</a>.</p>
+        <h2>Other Samples</h2>
+        <p>
+            Classic Samples are found <a href="index-all.html">here</a>. QA
+            Samples are found <a href="qa-all.html">here</a>.
+        </p>
 
         <h2>Simple Samples</h2>
         <p>
