--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -23,8 +23,9 @@
     </head>
     <body>
         <h1>RAMP 4 Classic Samples Catalogue</h1>
-        <h2>Enhanced Samples</h2>
-        Are found <a href="enhanced-all.html">here</a>.
+        <h2>Other Samples</h2>
+        Enhanced Samples are found <a href="enhanced-all.html">here</a>. QA
+        Samples are found <a href="qa-all.html">here</a>.
         <h2>Classic<sup>2</sup> Samples</h2>
         Samples from development which were ported to the Samples suite.
         <ul>
