--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -104,8 +104,10 @@
                 </option>
                 <option value="no-layers">46. Normal Map with No Layers</option>
             </select>
-            <a class="linky" href="index-all.html">Catalogue</a
-            ><a class="linky" href="enhanced-all.html">Enhanced Samples</a>
+            <nav class="linky-container">
+                <a class="linky" href="index-all.html">Catalogue</a
+                ><a class="linky" href="enhanced-all.html">Enhanced Samples</a>
+            </nav>
         </section>
 
         <noscript>
@@ -134,21 +136,42 @@
                 width: 100%;
                 background-color: darkslategrey;
                 display: flex;
-                justify-content: center;
                 height: 36px;
+                justify-content: space-between;
+                align-items: center;
+            }
+            .linky-container {
+                margin-right: 7px;
+                margin-bottom: 2px;
+                display: flex;
             }
             .linky {
-                flex-grow: 0;
                 white-space: nowrap;
                 color: greenyellow;
                 margin: 7px;
             }
             #selectConfig {
                 flex-grow: 1;
+                min-width: 0;
                 margin: 7px;
             }
             #app {
                 height: calc(100vh - 36px);
+            }
+            @media only screen and (max-width: 450px) {
+                #header {
+                    height: 65px;
+                    flex-wrap: wrap;
+                }
+                .linky-container {
+                    overflow-x: scroll;
+                }
+                #app {
+                    height: calc(100vh - 65px);
+                }
+                .linky {
+                    margin-top: 0;
+                }
             }
         </style>
 
