--- a/public/index-esm.html
+++ b/public/index-esm.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <title>ramp-core</title>
-        <link rel="stylesheet" href="./lib/ramp.css" />
+        <link rel="stylesheet" href="./esChunked/ramp.css" />
     </head>
     <body style="margin: 0">
         <style>
