Update lib references to root dist folder

--- a/public/index-simple.html
+++ b/public/index-simple.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -7,7 +7,7 @@
         <title>Basic RAMP Sample</title>
 
         <!-- Load RAMP stylesheet -->
-        <link rel="stylesheet" href="./lib/ramp.css" />
+        <link rel="stylesheet" href="./ramp.css" />
     </head>
     <body style="margin: 0">
         <!-- The page element that the RAMP instance will be created in -->
@@ -17,7 +17,7 @@
         ></div>
 
         <!-- Load the compiled RAMP script-->
-        <script src="./lib/ramp.browser.iife.js"></script>
+        <script src="./ramp.browser.iife.js"></script>
 
         <!-- Create simple RAMP instance-->
         <script>
