--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <title>ramp-core</title>
-        <link rel="stylesheet" href="./lib/ramp.css" />
+        <link rel="stylesheet" href="./ramp.css" />
     </head>
     <body style="margin: 0">
         <style>
@@ -26,7 +26,7 @@
             id="app"
             style="height: 100vh; max-height: -webkit-fill-available"
         ></div>
-        <script src="./lib/ramp.browser.iife.js"></script>
+        <script src="./ramp.browser.iife.js"></script>
         <script type="module" src="./starter-scripts/index.js"></script>
     </body>
 </html>
