change names of lambert base maps

--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -150,7 +150,7 @@
                                 basemaps: [
                                     {
                                         id: 'baseNrCan',
-                                        name: 'Canada Base Map - Transportation (CBMT)',
+                                        name: 'Canada Base Map - Transportation (CBMT) (Labels)',
                                         description:
                                             'The Canada Base Map - Transportation (CBMT) web mapping services of the Earth Sciences Sector at Natural Resources Canada, are intended primarily for online mapping application users and developers.',
                                         altText: 'The Canada Base Map - Transportation (CBMT)',
@@ -194,7 +194,7 @@
                                     },
                                     {
                                         id: 'baseCBMT_CBCT_GEOM_3978',
-                                        name: 'Canada Base Map - Transportation (CBMT)',
+                                        name: 'Canada Base Map - Transportation (CBMT) (No Labels)',
                                         description:
                                             ' The Canada Base Map - Transportation (CBMT) web mapping services of the Earth Sciences Sector at Natural Resources Canada, are intended primarily for online mapping application users and developers.',
                                         altText: 'Canada Base Map - Transportation (CBMT)',
