change names of lambert base maps

--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -150,9 +150,9 @@
                                 basemaps: [
                                     {
                                         id: 'baseNrCan',
-                                        name: 'Canada Base Map - Transportation (CBMT)',
+                                        name: 'Transportation (CBMT) (Labels)',
                                         description:
-                                            'The Canada Base Map - Transportation (CBMT) web mapping services of the Earth Sciences Sector at Natural Resources Canada, are intended primarily for online mapping application users and developers.',
+                                            'The Transportation (CBMT) (Labels) basemap displays topographical features and political boundaries, while focusing primarily on transportation routes. Has topographic labels',
                                         altText: 'The Canada Base Map - Transportation (CBMT)',
                                         layers: [
                                             {
@@ -166,7 +166,8 @@
                                     {
                                         id: 'baseSimple',
                                         name: 'Canada Base Map - Simple',
-                                        description: 'Canada Base Map - Simple',
+                                        description:
+                                            'The Canada Base Map - Simple basemap displays basic topographical features',
                                         altText: 'Canada base map - Simple',
                                         layers: [
                                             {
@@ -181,7 +182,7 @@
                                         id: 'baseCBME_CBCE_HS_RO_3978',
                                         name: 'Canada Base Map - Elevation (CBME)',
                                         description:
-                                            'The Canada Base Map - Elevation (CBME) web mapping services of the Earth Sciences Sector at Natural Resources Canada, is intended primarily for online mapping application users and developers.',
+                                            'The Canada Base Map - Elevation (CBME) basemap illustrates elevation differences, using contour lines and colour gradients',
                                         altText: 'Canada Base Map - Elevation (CBME)',
                                         layers: [
                                             {
@@ -194,9 +195,9 @@
                                     },
                                     {
                                         id: 'baseCBMT_CBCT_GEOM_3978',
-                                        name: 'Canada Base Map - Transportation (CBMT)',
+                                        name: 'Transportation (CBMT) (No Labels)',
                                         description:
-                                            ' The Canada Base Map - Transportation (CBMT) web mapping services of the Earth Sciences Sector at Natural Resources Canada, are intended primarily for online mapping application users and developers.',
+                                            'The Transportation (CBMT) (No Labels) basemap displays topographical features and political boundaries, while focusing primarily on transportation routes. Omits topographic labels',
                                         altText: 'Canada Base Map - Transportation (CBMT)',
                                         layers: [
                                             {
