change names of lambert base maps

--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -150,10 +150,10 @@
                                 basemaps: [
                                     {
                                         id: 'baseNrCan',
-                                        name: 'Canada Base Map - Transportation (CBMT)',
+                                        name: 'Transportation (CBMT - Labels)',
                                         description:
-                                            'The Canada Base Map - Transportation (CBMT) web mapping services of the Earth Sciences Sector at Natural Resources Canada, are intended primarily for online mapping application users and developers.',
-                                        altText: 'The Canada Base Map - Transportation (CBMT)',
+                                            'The Transportation (CBMT - Labels) basemap displays topographical features and political boundaries, while focusing primarily on transportation routes. Has topographic labels.',
+                                        altText: 'Transportation (CBMT - Labels)',
                                         layers: [
                                             {
                                                 id: 'CBMT',
@@ -165,9 +165,10 @@
                                     },
                                     {
                                         id: 'baseSimple',
-                                        name: 'Canada Base Map - Simple',
-                                        description: 'Canada Base Map - Simple',
-                                        altText: 'Canada base map - Simple',
+                                        name: 'Simple Land-Water Boundaries',
+                                        description:
+                                            'The Simple Land-Water Boundaries basemap displays basic topographical features, in particular land and water boundaries.',
+                                        altText: 'Simple Land-Water Boundaries',
                                         layers: [
                                             {
                                                 id: 'SMR',
@@ -179,10 +180,10 @@
                                     },
                                     {
                                         id: 'baseCBME_CBCE_HS_RO_3978',
-                                        name: 'Canada Base Map - Elevation (CBME)',
+                                        name: 'Elevation (CBME)',
                                         description:
-                                            'The Canada Base Map - Elevation (CBME) web mapping services of the Earth Sciences Sector at Natural Resources Canada, is intended primarily for online mapping application users and developers.',
-                                        altText: 'Canada Base Map - Elevation (CBME)',
+                                            'The Elevation (CBME) basemap illustrates elevation differences, using contour lines and colour gradients.',
+                                        altText: 'Elevation (CBME)',
                                         layers: [
                                             {
                                                 id: 'CBME_CBCE_HS_RO_3978',
@@ -194,10 +195,10 @@
                                     },
                                     {
                                         id: 'baseCBMT_CBCT_GEOM_3978',
-                                        name: 'Canada Base Map - Transportation (CBMT)',
+                                        name: 'Transportation (CBMT - No Labels)',
                                         description:
-                                            ' The Canada Base Map - Transportation (CBMT) web mapping services of the Earth Sciences Sector at Natural Resources Canada, are intended primarily for online mapping application users and developers.',
-                                        altText: 'Canada Base Map - Transportation (CBMT)',
+                                            'The Transportation (CBMT - No Labels) basemap displays topographical features and political boundaries, while focusing primarily on transportation routes. Omits topographic labels.',
+                                        altText: 'Transportation (CBMT - No Labels)',
                                         layers: [
                                             {
                                                 id: 'CBMT_CBCT_GEOM_3978',
@@ -432,10 +433,10 @@
                                 basemaps: [
                                     {
                                         id: 'baseNrCan',
-                                        name: 'Carte de base du Canada - transport (CBCT) avec étiquettes',
+                                        name: 'Transport (CBMT - Étiquettes)',
                                         description:
-                                            "La carte de base du Canada - transport (CBCT) du Secteur des sciences de la Terre de Ressources naturelles Canada est un service Internet qui s'adresse principalement aux utilisateurs et développeurs d'applications cartographiques en ligne.",
-                                        altText: 'La carte de base du Canada - transport (CBCT)',
+                                            'La carte de base des transports (CBMT - étiquettes) affiche les caractéristiques topographiques et les frontières politiques, tout en se concentrant principalement sur les itinéraires de transport. Contient des étiquettes topographiques.',
+                                        altText: 'Transport (CBMT - Étiquettes)',
                                         layers: [
                                             {
                                                 id: 'CBCT',
@@ -461,10 +462,10 @@
                                     },
                                     {
                                         id: 'baseCBME_CBCE_HS_RO_3978',
-                                        name: 'Carte de base du Canada - élevation (CBCE)',
+                                        name: 'Élévation (CBME)',
                                         description:
-                                            "La carte de base du Canada - élevation (CBCE) du Secteur des sciences de la Terre de Ressources naturelles Canada est un service Internet qui s'adresse principalement aux utilisateurs et développeurs d'applications cartographiques en ligne.",
-                                        altText: 'La carte de base du Canada - élevation (CBCE)',
+                                            "La carte de base d'élévation (CBME) illustre les différences d'élévation à l'aide de lignes de contour et de dégradés de couleurs.",
+                                        altText: 'Élévation (CBME)',
                                         layers: [
                                             {
                                                 id: 'CBME_CBCE_HS_RO_3978',
@@ -476,10 +477,10 @@
                                     },
                                     {
                                         id: 'baseCBMT_CBCT_GEOM_3978',
-                                        name: 'Carte de base du Canada - transport (CBCT)',
+                                        name: 'Transport (CBMT - Sans étiquette)',
                                         description:
-                                            "La carte de base du Canada - transport (CBCT) du Secteur des sciences de la Terre de Ressources naturelles Canada est un service Internet qui s'adresse principalement aux utilisateurs et développeurs d'applications cartographiques en ligne.",
-                                        altText: 'La carte de base du Canada - transport (CBCT)',
+                                            'La carte de base des transports (CBMT - Sans étiquettes) affiche les caractéristiques topographiques et les frontières politiques, tout en se concentrant principalement sur les itinéraires de transport. Omet les étiquettes topographiques.',
+                                        altText: 'Transport (CBMT - Sans étiquette)',
                                         layers: [
                                             {
                                                 id: 'CBMT_CBCT_GEOM_3978',
