--- a/demos/enhanced-all.html
+++ b/demos/enhanced-all.html
@@ -80,7 +80,7 @@
         <ul>
             <li>
                 07.
-                <a href="index-samples.html?sample=7">O.G. Main</a>. The first / default sample from the classic
+                <a href="enhanced-samples.html?sample=7">O.G. Main</a>. The first / default sample from the classic
                 samples.
             </li>
         </ul>
