add methods to register and update panels using html content

--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -23,6 +23,7 @@
                 <option value="006-simple-data">06. Simple Data Layers</option>
                 <option value="007-main-classic">07. Classic Main Sample</option>
                 <option value="008-projection-party">08. Layers in Different Projections</option>
+                <option value="009-custom-panels">09. Custom HTML panels</option>
             </select>
             <nav class="linky-container">
                 <a class="linky" href="enhanced-all.html">Catalogue</a
