--- a/demos/enhanced-all.html
+++ b/demos/enhanced-all.html
@@ -73,6 +73,10 @@
                 <a href="enhanced-samples.html?sample=8">Different Projections</a>. Has feature-based layers in a mix of
                 source projections.
             </li>
+            <li>
+                09.
+                <a href="enhanced-samples.html?sample=9">Custom HTML panels</a>. Contains custom HTML panels
+            </li>
         </ul>
 
         <h2>Fancy Samples</h2>
