--- a/demos/index-form.html
+++ b/demos/index-form.html
@@ -5,32 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <title>ramp-core</title>
+        <link rel="stylesheet" href="./styles/form.css" />
     </head>
     <body style="margin: 0">
         <style>
-            #container {
-                display: flex;
-                flex-direction: column;
-                padding: 0 10px;
-                width: 100%;
-                align-items: center;
-                box-sizing: border-box;
-            }
-
             #ramp-instance {
-                width: 100%;
                 height: 60vh;
-                border: 2px solid black;
-                box-sizing: border-box;
-                margin: 10px 0;
-                border-radius: 6px;
-            }
-
-            #form {
-                width: 40vw;
-                border: 2px solid black;
-                padding: 20px;
-                box-sizing: border-box;
             }
 
             #form-input,
@@ -50,12 +30,6 @@
                 background: black;
                 color: white;
                 cursor: pointer;
-            }
-
-            @media only screen and (max-width: 768px) {
-                #form {
-                    width: 90vw;
-                }
             }
         </style>
         <noscript>
