--- a/demos/qa-all.html
+++ b/demos/qa-all.html
@@ -1,36 +1,8 @@
 <html>
     <head>
         <title>R4MP QA Samples Yellow Pages</title>
-        <style>
-            .tag {
-                display: inline-block;
-                border-radius: 3px;
-                padding: 0.2em 0.5em 0.3em;
-                margin: 0.25em 0.1em;
-                background: #888888;
-                color: #000000;
-            }
-            .layer {
-                background: #41b883;
-            }
-            .legend {
-                background: #b8b641;
-            }
-            .misc {
-                background: #ee7d20;
-            }
-            body {
-                background-color: black;
-                color: aliceblue;
-            }
-            a {
-                color: deepskyblue;
-            }
-            li,
-            p {
-                font-size: 1.1rem;
-            }
-        </style>
+        <link rel="stylesheet" href="./styles/all-common.css" />
+        <link rel="stylesheet" href="./styles/all-enhanced-qa.css" />
     </head>
     <body>
         <h1>RAMP 4 QA Samples Catalogue</h1>
