--- a/demos/index-teleport-details.html
+++ b/demos/index-teleport-details.html
@@ -5,42 +5,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <title>ramp-core</title>
+        <link rel="stylesheet" href="./styles/form.css" />
     </head>
     <body style="margin: 0">
         <style>
-            #container {
-                display: flex;
-                flex-direction: column;
-                padding: 0 10px;
-                width: 100%;
-                align-items: center;
-                box-sizing: border-box;
-            }
-
             #ramp-instance {
-                width: 100%;
-                height: 50vh;
-                border: 2px solid black;
-                box-sizing: border-box;
-                margin: 10px 0;
-                border-radius: 6px;
+                height: 60vh;
             }
 
             #details {
                 min-width: 350px;
                 max-width: 350px;
-                height: 50vh;
+                height: 60vh;
                 border: 2px solid black;
                 box-sizing: border-box;
                 margin: 10px 0;
                 border-radius: 6px;
-            }
-
-            #form {
-                width: 90vw;
-                border: 2px solid black;
-                padding: 20px;
-                box-sizing: border-box;
             }
         </style>
         <noscript>
