--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <title>Enhanced RAMP4 Samples</title>
+        <link rel="stylesheet" href="./styles/samples.css" />
     </head>
     <body style="margin: 0">
         <section id="header">
@@ -40,61 +41,6 @@
 
         <div id="IE"></div>
         <div id="app"></div>
-
-        <style>
-            #instance-language {
-                margin-left: 20px;
-            }
-            #container {
-                display: flex;
-                flex-wrap: nowrap;
-                flex-direction: column;
-                height: 100vh;
-                max-height: 100vh;
-                overflow: hidden;
-            }
-            #header {
-                width: 100%;
-                background-color: darkslategrey;
-                display: flex;
-                height: 36px;
-                justify-content: space-between;
-                align-items: center;
-            }
-            .linky-container {
-                margin-right: 7px;
-                margin-bottom: 2px;
-                display: flex;
-            }
-            .linky {
-                white-space: nowrap;
-                color: greenyellow;
-                margin: 7px;
-            }
-            #selectConfig {
-                flex-grow: 1;
-                min-width: 0;
-                margin: 7px;
-            }
-            #app {
-                height: calc(100vh - 36px);
-            }
-            @media only screen and (max-width: 400px) {
-                #header {
-                    height: 65px;
-                    flex-wrap: wrap;
-                }
-                .linky-container {
-                    overflow-x: scroll;
-                }
-                #app {
-                    height: calc(100vh - 65px);
-                }
-                .linky {
-                    margin-top: 0;
-                }
-            }
-        </style>
 
         <script type="module">
             import { createInstance, geo } from '@/main';
