--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -1,25 +1,7 @@
 <html>
     <head>
         <title>R4MP Classic Samples Yellow Pages</title>
-        <style>
-            .tag {
-                display: inline-block;
-                border-radius: 3px;
-                padding: 0.2em 0.5em 0.3em;
-                margin: 0.25em 0.1em;
-                background: #888888;
-                color: #000000;
-            }
-            .layer {
-                background: #41b883;
-            }
-            .legend {
-                background: #b8b641;
-            }
-            .misc {
-                background: #ee7d20;
-            }
-        </style>
+        <link rel="stylesheet" href="./styles/all.css" />
     </head>
     <body>
         <h1>RAMP 4 Classic Samples Catalogue</h1>
