--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -26,6 +26,7 @@
                 <option value="008-projection-party">08. Layers in Different Projections</option>
                 <option value="009-custom-panels">09. Custom HTML panels</option>
                 <option value="010-identify-priority">10. Identify Prioritization</option>
+                <option value="011-layer-swipe">11. Layer Swipe</option>
             </select>
             <nav class="linky-container">
                 <a class="linky" href="enhanced-all.html">Catalogue</a
