--- a/demos/enhanced-all.html
+++ b/demos/enhanced-all.html
@@ -48,6 +48,10 @@
                 09.
                 <a href="enhanced-samples.html?sample=9">Custom HTML panels</a>. Contains custom HTML panels
             </li>
+            <li>
+                12.
+                <a href="enhanced-samples.html?sample=12">Layer Swipe</a>. Contains demo of layer swipe feature
+            </li>
         </ul>
 
         <h2>Fancy Samples</h2>
