--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -27,6 +27,7 @@
                 <option value="009-custom-panels">09. Custom HTML panels</option>
                 <option value="010-identify-priority">10. Identify Prioritization</option>
                 <option value="011-clusterer">11. Point Clusterer</option>
+                <option value="012-layer-swipe">12. Layer Swipe</option>
             </select>
             <nav class="linky-container">
                 <a class="linky" href="enhanced-all.html">Catalogue</a
