Add initial support for draw tools

--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -73,6 +73,7 @@
                         'panguard',
                         'settings',
                         'wizard',
+                        'draw',
                         'export' // export is not default, but usually want for tests
                     ],
                     configs: {
@@ -349,7 +350,8 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch'
+                                        'geosearch',
+                                        'draw'
                                     ]
                                 },
                                 export: {
@@ -615,7 +617,8 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch'
+                                        'geosearch',
+                                        'draw'
                                     ]
                                 },
                                 export: {
