Add initial support for draw tools

--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -58,8 +58,8 @@
                     startingFixtures: [
                         'appbar',
                         'basemap',
-                        'crosshairs',
                         'details',
+                        'crosshairs',
                         'geosearch',
                         'grid',
                         'help',
@@ -349,7 +349,8 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch'
+                                        'geosearch',
+                                        'draw'
                                     ]
                                 },
                                 export: {
@@ -615,7 +616,8 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch'
+                                        'geosearch',
+                                        'draw'
                                     ]
                                 },
                                 export: {
